--- a/styles/dark-theme.css
+++ b/styles/dark-theme.css
@@ -172,4 +172,12 @@ border-collapse: collapse;
       margin-top: 75px;
       margin-bottom: 20px;
   }
+    .scrolldiv{
+        position: relative;
+        overflow-y: scroll;
+        height: 600px;
+        margin-left: 100px;
+        width: 100%;
+    }
 }
+
