--- a/styles/light-theme.css
+++ b/styles/light-theme.css
@@ -1,13 +1,20 @@
 @media only screen and (min-width:1024px) {
-.col-sm-7-scroll{
-    position: absolute;
-    top: 40%;
-    bottom: 5%;
-    right: 0;
-    left: 30%;
-    overflow-y: scroll;
-    width: 70%;
-}
+    .col-sm-7-scroll{
+        position: absolute;
+        top: 40%;
+        bottom: 5%;
+        right: 0;
+        left: 30%;
+        overflow-y: scroll;
+        width: 70%;
+    }
+    .scrolldiv{
+        position: relative;
+        overflow-y: scroll;
+        height: 600px;
+        margin-left: 100px;
+        width: 100%;
+    }
 }
 .col-md-3-scroll-left{
     position: absolute;
